--- a/Style/style.css
+++ b/Style/style.css
@@ -7,72 +7,103 @@
     font-style: normal;
 }
 
-body{
+body {
     width: 1440px;
     margin: 0px auto;
 }
 
-/* navbar start */
-
-.nav-bar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-photo{
-    display: flex;
-    align-items: center;
-    gap: 11px;
-}
-
-.nav-heading{
-    font-size: 2rem;
-    font-weight: 700;
-}
-
-.nav-ul{
-    display: flex;
-    gap: 32px;
-    list-style-type: none;
-}
-
-.nav-ul>li>a {
+*{
+    padding: 0;
+    margin: 0;
     text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+nav{
+    background-color: rgb(230, 49, 49);
+    height: 80px;
+    width: 100%;
+}
+
+label.logo{
+    line-height: 80px;
+    padding: 0 100px;
+}
+
+nav ul {
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a {
     font-size: 1.25rem;
     font-weight: 700;
+    padding: 7px 13px;
+    border-radius: 3px;
+    text-transform: uppercase;
 }
 
-.li-1{
-    color: rgb(254, 163, 1);
+a:hover{
+    background: rgba(165, 136, 136, 0.8);
+    transition: 0.5s;
 }
 
-.li-2{
-    color: rgb(1, 172, 253);
+.check-btn{
+    font-size: 2rem;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
 }
 
-.li-3{
-    color: rgb(5, 212, 223);
+#check{
+    display: none;
 }
 
-.li-4{
-    color: rgb(93, 88, 239);
-}
+@media screen and (max-width: 576px) {
+    label.logo{
+        padding-left: 50px;
+    }
 
-.nav-btn{
-    background-color: rgb(254, 163, 1);
-    color: white;
-    font-size: 1.25rem;
-    font-weight: 600;
-    padding: 10px 60.5px;
-    border-radius: 12px;
-    border: none;
-}
+    .check-btn{
+        display: block;
+    }
 
-/* main mark for me  */
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: black;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all 0.5s;
+    }
 
-@media screen and (max-width:576px) {
-    body{
-        width: 390px;
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        font-size: 20px;
+    }
+
+    a:hover{
+        background: none;
+        color: chartreuse;
+    }
+
+    #check:checked ~ ul{
+        left: 0;
     }
 }
