--- a/Style/style.css
+++ b/Style/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 nav{
-    background-color: rgb(230, 49, 49);
+    background-color: white;
     height: 80px;
     width: 100%;
 }
@@ -69,6 +69,11 @@ a:hover{
 }
 
 @media screen and (max-width: 576px) {
+
+    body{
+        width: 390px;
+    }
+
     label.logo{
         padding-left: 50px;
     }
