--- a/Style/style.css
+++ b/Style/style.css
@@ -21,18 +21,37 @@ body {
 }
 
 nav{
-    background-color: white;
     height: 80px;
     width: 100%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-between;
 }
 
-label.logo{
-    line-height: 80px;
-    padding: 0 100px;
+.nav-btn{
+    background-color: rgb(254, 163, 1);
+    padding: 10px 60.5px;
+    color: white;
+    border-radius: 12px;
+    border: none;
+    font-size: 1.25rem;
+    font-weight: 600;
+    cursor: pointer;
 }
 
-nav ul {
-    float: right;
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.nav-heading{
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.nav-ul {
+    /* float: right; */
     margin-right: 20px;
 }
 
@@ -50,7 +69,7 @@ nav ul li a {
     text-transform: uppercase;
 }
 
-a:hover{
+li a:hover{
     background: rgba(165, 136, 136, 0.8);
     transition: 0.5s;
 }
@@ -74,7 +93,15 @@ a:hover{
         width: 390px;
     }
 
-    label.logo{
+    .nav-btn{
+        display: none;
+    }
+
+    .nav-heading{
+        display: none;
+    }
+
+    .logo{
         padding-left: 50px;
     }
 
@@ -82,7 +109,11 @@ a:hover{
         display: block;
     }
 
-    ul{
+    nav{
+        padding: 12px 16px;
+    }
+
+    .nav-ul{
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -90,7 +121,16 @@ a:hover{
         top: 80px;
         left: -100%;
         text-align: center;
-        transition: all 0.5s;
+        transition: all 0.5s ease;
+        z-index: 1000;
+    }
+    
+    .check-btn {
+        font-size: 2.5rem;
+        line-height: 80px;
+        cursor: pointer;
+        display: block;
+        z-index: 2000; /* Above the menu */
     }
 
     nav ul li {
@@ -108,7 +148,7 @@ a:hover{
         color: chartreuse;
     }
 
-    #check:checked ~ ul{
+    #check:checked ~ .nav-ul{
         left: 0;
     }
 }
