--- a/Style/style.css
+++ b/Style/style.css
@@ -20,6 +20,8 @@ body {
     box-sizing: border-box;
 }
 
+/* nav style start */
+
 nav{
     height: 80px;
     width: 100%;
@@ -50,8 +52,23 @@ nav{
     font-weight: 700;
 }
 
+.list-1{
+    color: rgb(254, 163, 1);
+}
+
+.list-2{
+    color: rgb(1, 172, 253);
+}
+
+.list-3{
+    color: rgb(5, 212, 223);
+}
+
+.list-4{
+    color: rgb(93, 88, 239);
+}
+
 .nav-ul {
-    /* float: right; */
     margin-right: 20px;
 }
 
@@ -87,6 +104,49 @@ li a:hover{
     display: none;
 }
 
+/* nav style end */
+
+/* banner style start */
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner-heading{
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.heading-1{
+    color: rgb(254, 163, 1);
+}
+
+.heading-2{
+    color: rgb(1, 172, 253);
+}
+
+.banner-p{
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-bottom: 24px;
+    color: rgb(17, 17, 17);
+}
+
+.banner-btn{
+    background-color: rgb(17, 17, 17);
+    color: rgb(255, 255, 255);
+    font-size: 1.25rem;
+    font-weight: 700;
+    padding: 10px 47px;
+    border-radius: 12px;
+    border: none;
+}
+
+/* banner style end */
+
 @media screen and (max-width: 576px) {
 
     body{
@@ -111,7 +171,8 @@ li a:hover{
 
     nav{
         padding: 12px 16px;
-        align-items: center;
+        align-items: center ;
+        border-bottom: 0.5px solid rgb(254, 163, 1);
     }
 
     .nav-ul{
@@ -152,5 +213,13 @@ li a:hover{
 
     #check:checked ~ .nav-ul{
         left: 0;
+    }
+
+    .banner{
+        flex-direction: column;
+    }
+
+    .banner-all{
+        order: 2;
     }
 }
