--- a/Style/style.css
+++ b/Style/style.css
@@ -166,6 +166,9 @@ li a:hover {
 
 .curriculum {
     background-image: url(../assets/bg.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .curriculum-heading {
@@ -179,12 +182,16 @@ li a:hover {
     font-size: 1.56rem;
     font-weight: 700;
     color: rgb(32, 32, 32);
+    text-align: center;
+    margin-top: -32px;
 }
 
 .curriculum-card-des {
     font-size: 0.95rem;
     font-weight: 500;
     color: rgb(128, 128, 128);
+    text-align: center;
+    margin-top: 15px;
 }
 
 .curriculum-card {
@@ -195,22 +202,31 @@ li a:hover {
     gap: 29px;
 }
 
+.curriculum-card img{
+    margin: 40px 117px;
+}
+
 .curriculum-card-1 {
+    height: 477px;
+    padding: 40px 53px;
     box-sizing: border-box;
     border: 0.94px solid rgb(222, 245, 255);
     border-radius: 18.86px;
-
     box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
     background: linear-gradient(180.00deg, rgb(222, 245, 255), rgba(255, 255, 255, 0) 40%), rgb(255, 255, 255);
 }
 
 .curriculum-btn-1 {
+    text-align: center;
     color: rgb(100, 200, 255);
     font-size: 0.95rem;
-    font-weight: 700;
+    font-weight: 700; 
+    margin-top: 25px;
 }
 
 .curriculum-card-2 {
+    height: 477px;
+    padding: 40px 53px;
     box-sizing: border-box;
     border: 0.94px solid rgb(255, 244, 220);
     border-radius: 18.86px;
@@ -219,12 +235,16 @@ li a:hover {
 }
 
 .curriculum-btn-2 {
+    text-align: center;
     color: rgb(240, 170, 0);
     font-size: 0.95rem;
     font-weight: 700;
+    margin-top: 25px;
 }
 
 .curriculum-card-3 {
+    padding: 40px 53px;
+    height: 477px;
     box-sizing: border-box;
     border: 0.94px solid rgb(242, 232, 255);
     border-radius: 18.86px;
@@ -233,9 +253,30 @@ li a:hover {
 }
 
 .curriculum-btn-3 {
+    text-align: center;
     color: rgb(135, 0, 255);
     font-size: 0.95rem;
     font-weight: 700;
+    margin-top: 25px;
+}
+
+.arrow-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 80px;
+}
+
+.arrow {
+    padding: 18px 23px;
+    border-radius: 30px;
+    background: rgb(254, 163, 1);
+    border: none;
+    font-size: 1.5rem;
+    font-weight: 900;
+    cursor: pointer;
+    color: rgb(255, 255, 255);
 }
 
 
