--- a/Style/style.css
+++ b/Style/style.css
@@ -433,6 +433,68 @@ main {
     gap: 20px;
 }
 
+.marquee-text{
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+/* main style end */
+
+/* footer style start */
+
+footer{
+    background: rgb(1, 172, 253);
+}
+
+.all-footer{
+    padding: 123px 228.09px 174px 140px;
+    display: flex;
+    gap: 80px;
+}
+
+.logo-div{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo-heading{
+    font-size: 2rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+}
+
+.footer-des{
+    font-size: 1.25rem;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+}
+
+.header-school{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    margin-bottom: 15px;
+}
+
+.ul-items{
+    list-style: none;
+    color: rgb(255, 255, 255); 
+    margin-bottom: 10px;  
+}
+
+.social-heading{
+    font-size: 1.625rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    margin-bottom: 15px;
+}
+
+.all-icons{
+    display: flex;
+    gap: 10px;
+}
+
 
 @media screen and (max-width: 576px) {
 
