--- a/Style/style.css
+++ b/Style/style.css
@@ -129,6 +129,8 @@ li a:hover {
 }
 
 .banner-section {
+    width: 100%;
+    height: auto;
     margin-bottom: 60px;
 }
 
@@ -609,16 +611,18 @@ footer {
         font-weight: 500;
     }
 
-    /* .banner-img{
-        width: 336px;
-        margin-right: 20px;
-} */
+    .banner-section {
+        width: 100%;
+        height: auto;
+        padding: 0 20px;
+    }
 
     .banner-all {
         order: 2;
     }
 
     .banner {
+        padding: 10px;
         text-align: center;
     }
 
