--- a/Style/style.css
+++ b/Style/style.css
@@ -538,7 +538,7 @@ footer {
     }
 
     nav {
-        padding: 12px 16px;
+        padding-bottom: 20px;
         align-items: center;
         border-bottom: 0.5px solid rgb(254, 163, 1);
     }
@@ -549,7 +549,7 @@ footer {
         width: 100%;
         height: 100vh;
         background: black;
-        top: 80px;
+        top: 50px;
         left: -100%;
         text-align: center;
         transition: all 0.5s ease;
@@ -562,7 +562,6 @@ footer {
         cursor: pointer;
         display: block;
         z-index: 2000;
-        /* Above the menu */
     }
 
     nav ul li {
@@ -575,7 +574,7 @@ footer {
         font-size: 20px;
     }
 
-    a:hover {
+    nav ul li a:hover {
         background: none;
         color: chartreuse;
     }
