--- a/Style/style.css
+++ b/Style/style.css
@@ -177,7 +177,14 @@ li a:hover {
 
 /* curriculum style */
 
-main {
+/* main {
+    background-image: url(../assets/bg.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+} */
+
+.curriculum{
     background-image: url(../assets/bg.png);
     background-size: cover;
     background-position: center;
@@ -300,7 +307,7 @@ main {
 /* our-stories style */
 
 .our-stories {
-    background: url(image), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
+    background: url(../assets/bg.png), linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%);
     padding: 60px 140px;
     text-align: center;
 }
